# intro-skipper

./: CMakeLists.txt  README.md
analyse/: CMakeLists.txt  analyse.c  analyse.h  main_analyse.c  output.c  output.h
analyse-gtk/: CMakeLists.txt  builder.ui  gdk_util.c  gdk_util.h  gresource.xml  gui.glade  main_analyse_gtk.c  output.fd
cmake-modules/: FindAVDevice.cmake  FindAVFilter.cmake  FindSWScale.cmake  GResource.cmake
core/: CMakeLists.txt  frame_io.c  frame_io.h  frame_util.c  frame_util.h  json_util.c  json_util.h  skimmer.c  skimmer.h
extract/: CMakeLists.txt  extract.c  extract.h  main_extract.c
